# AndroidNativeFramework

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/huawei/zip/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: manager.apk
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: CentralDirectory.h  File.h  FileMap.h  FileWriter.h  HLog.h  IterationHandle.h  Macros.h  MappedZipFile.h  Micros.h  StringUtils.h  Timers.h  Writer.h  ZipEntry.h  ZipFile.h  ZipFileCommon.h  ZipString.h  unzip.h  zip_archive.h  zip_archive_stream_entry.h  zip_writer.h
app/src/main/cpp/include/android_base/: chrono_utils.h  logging.h  memory.h  test_utils.h  unique_fd.h  utf8.h
app/src/main/cpp/src/: File.cpp  FileMap.cpp  MappedZipFile.cpp  StringUtils.cpp  Timer.cpp  ZipFile.cpp  unzip.cpp  zip_archive.cpp  zip_archive_common.h  zip_archive_private.h  zip_archive_stream_entry.cpp  zip_writer.cpp
app/src/main/cpp/src/android_base/: Compat.h  chrono_utils.cpp  errors_unix.cpp  file.cpp  logging.cpp  parsenetaddress.cpp  properties.cpp  quick_exit.cpp  stringprintf.cpp  strings.cpp
app/src/main/java/com/huawei/zip/: MainActivity.java  ZipUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/huawei/zip/: ExampleUnitTest.java
nativebase/: build.gradle
nativebase/src/androidTest/java/com/huawei/nativebase/: ExampleInstrumentedTest.java
nativebase/src/main/: AndroidManifest.xml
nativebase/src/main/cpp/: CMakeLists.txt
nativebase/src/main/cpp/include/: HLog.h
nativebase/src/main/cpp/include/base/: chrono_utils.h  logging.h  memory.h  strings.h  test_utils.h  unique_fd.h
nativebase/src/main/cpp/src/: chrono_utils.cpp  errors_unix.cpp  file.cpp  logging.cpp  parsenetaddress.cpp  properties.cpp  quick_exit.cpp  strings.cpp
nativebase/src/test/java/com/huawei/nativebase/: ExampleUnitTest.java
